--- a/IlmBase/CMakeLists.txt
+++ b/IlmBase/CMakeLists.txt
@@ -1,6 +1,10 @@
 # yue.nicholas@gmail.com
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
+# Suppress policy warnings
+cmake_policy(SET CMP0048 OLD)
+cmake_policy(SET CMP0026 OLD)
+
 PROJECT ( ilmbase )
 
 SET(ILMBASE_VERSION_MAJOR "2")
